Update: major changes in frontend/backend